--- a/css/sandals-879861.webflow.css
+++ b/css/sandals-879861.webflow.css
@@ -266,6 +266,10 @@ body {
   aspect-ratio: 5/3;
 }
 
+.gallery.active.query .back-button{
+  display: none;
+}
+
 .resort-image {
   aspect-ratio: 5 / 3;
   overflow: hidden;
