--- a/css/sandals-879861.webflow.css
+++ b/css/sandals-879861.webflow.css
@@ -5,7 +5,8 @@
 
 body {
   color: #333;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica Neue, Helvetica, sans-serif; */
+  font-family: 'SandalsSans', sans-serif;
   font-size: 14px;
   line-height: 20px;
 }
@@ -46,10 +47,9 @@ body {
 .button-wrapper, .Book-now-button{
   color: #fff;
   letter-spacing: 1px;
-  text-transform: uppercase;
-  background-color: #000;
+  background-color: #0057FF;
   padding: 8px 12px;
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   font-size: 18px;
   text-decoration: none;
   display: block;
@@ -57,7 +57,8 @@ body {
 }
 
 .button-wrapper:hover, .Book-now-button {
-  background-color: #068faa;
+  background-color: #fff;
+  color: #171724;
 }
 
 .hero-text {
@@ -70,7 +71,7 @@ body {
 
 .heading {
   color: #fff;
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   font-size: 79px;
   font-weight: 300;
 }
@@ -92,9 +93,17 @@ body {
 }
 
 .filters {
-  background-color: #214f73;
+  background: #F8F0DB;
+
   padding: 22px;
   padding-bottom: 100px;
+}
+.main-container{
+  max-width: 1280px;
+  margin: 0 auto;
+}
+.filters-inner{
+  padding-left: 3.5rem;
 }
 
 .filters-title {
@@ -104,35 +113,42 @@ body {
   align-items: flex-start;
   position: sticky;
   top: 0;
-  background-color: #214f73;
+  background: #F8F0DB;
+
+
+  /* background-color: #214f73; */
 }
 
 .update-results-button, .reset-filters-button {
-  background-color: #214F73;
-  color: #fff;
+  background: #F8F0DB;
+
+
+  color: #171724;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: Open Sans, sans-serif;
+  font-family: 'SandalsSans', sans-serif;
   font-size: 20px;
-  font-weight: 600;
-  text-transform: capitalize;
+  font-weight: 500;
   margin-top: 28px;
-  border: 1px solid #fff;
+  border: 1px solid #171724;
+
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 12px;
 }
 
 .update-results-button:hover, .reset-filters-button:hover {
-  background-color: #fff;
-  color: #214F73;
+  background-color: #0057FF;
+
+  color: #fff;
 }
 
 .heading-2 {
-  color: #fff;
+  color: #0057FF;
+
   text-transform: uppercase;
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
 }
 
 .tag-wrapper {
@@ -145,9 +161,8 @@ body {
 }
 
 .heading-3 {
-  color: rgba(255, 255, 255, .6);
-  text-transform: uppercase;
-  font-family: Open Sans, sans-serif;
+  color: #0057FF;
+  /* font-family: Open Sans, sans-serif; */
 }
 
 .heading-3.tag-title {
@@ -156,14 +171,16 @@ body {
 }
 
 .heading-3.tag-text {
-  color: #a8b9c8;
+  color: #0057FF;
+  font-size: 14px;
+  line-height: 10px;
 }
 
 .tag {
-  border: 1px solid #fff;
+  border: 1px solid #0057FF;
   border-radius: 10px;
   margin-right: 20px;
-  padding: 5px 10px;
+  padding: 0px 10px;
   cursor: pointer;
 }
 
@@ -172,18 +189,18 @@ body {
 }
 
 .tag:hover {
-  color: #214f73;
-  background-color: #fff;
+  color: #fff;
+  background-color: #0057FF;
   cursor: pointer;
 }
 
 .tag:hover .heading-3{
-  color: #214F73;
+  color: #fff;
 }
 
 .heading-4 {
   color: #fff;
-  font-family: Open Sans, sans-serif;
+  /* font-family: SandalsSans, sans-serif; */
   font-size: 80px;
   font-weight: 300;
   line-height: 80px;
@@ -218,12 +235,13 @@ body {
 }
 
 .resort-wrapper {
-  padding: 22px;
+  padding: 22px 0;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   display: flex;
   width: 100%;
+  gap:1rem;
 }
 
 .resort-wrapper.selected {
@@ -232,8 +250,9 @@ body {
 
 .left-resort-details {
   width: 29%;
-  background-color: #214F73;
+  background: #171724;
   padding: 10px;
+  border-radius: 12px;
 }
 
 .left-resort-details .resort-image {
@@ -243,17 +262,20 @@ body {
 
 .right-resort-details {
   width: 70%;
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
 }
 
 .resort-description {
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   color: #fff;
 }
 
 .resort-description h2 {
   color: #fff;
-  font-family: Open Sans, sans-serif;
+  
+  font-family: 'SandalsSans', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
 }
 
 .resort-images {
@@ -274,7 +296,8 @@ body {
   aspect-ratio: 5 / 3;
   overflow: hidden;
   width: 49%;
-  margin-bottom: 10px;
+  border-radius: 10px;
+
 }
 
 .resort-image.map {
@@ -305,13 +328,15 @@ body {
 }
 
 .ideal-card {
-  background-color: #316F90;
-  width: 32.3%;
+  background: #F8F0DB;
+
+  width: 31.5%;
   color: #fff;
   padding: 10px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  border-radius: 10px;
 }
 
 .ideal-card svg {
@@ -319,7 +344,7 @@ body {
   height: 36px;
 
   path {
-    fill: #fff;
+    fill: #0057FF;
   }
 }
 
@@ -327,14 +352,14 @@ body {
   margin-top: 10px;
   font-size: 13px;
   line-height: 1;
-  color: #fff;
+  color: #0057FF;
 }
 
 .tabs {
   display: flex;
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   font-size: 22px;
-  padding: 20px 0 20px 0px;
+  padding: 5px 0 20px 0px;
   color: #fff;
   cursor: pointer;
 }
@@ -343,29 +368,30 @@ body {
   margin-left: auto;
   display: flex;
   align-items: center;
-  margin-top: -15px;
+  margin-top: -10px;
   margin-right: 0 !important;
 }
 
 .back-button {
   text-align: center;
-  padding: 10px;
-  color: #fff;
-  font-family: Open Sans, sans-serif;
+  padding: 7px;
+  color: #171724;
+  /* font-family: Open Sans, sans-serif; */
   font-size: 18px;
   display: block;
   text-decoration: none;
-  border: 1px solid #fff;
+  border: 1px solid #171724;
   border-radius: 8px;
 }
 
-.back-button:hover {
+/* .back-button:hover {
   background-color: #fff;
   color: #214f73;
-}
+} */
 
 .tabs > div {
-  color: #fff;
+  color:#171724;
+
 }
 
 .tabs div {
@@ -374,7 +400,9 @@ body {
 
 .ideal-for-title {
   color: #fff;
-  font-family: Open Sans, sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  /* font-family: Open Sans, sans-serif; */
 }
 
 .tag.selected {
@@ -393,7 +421,7 @@ body {
   box-sizing: border-box;
 }
 
-body { font-family: sans-serif; }
+/* body { font-family: sans-serif; } */
 
 .gallery {
   background: #EEE;
@@ -446,11 +474,12 @@ body { font-family: sans-serif; }
 }
 
 .gallery {
-  background-color: #133c5d;
+  background: #F8F0DB;
+
 }
 
 .active-tab {
-  border-bottom: 3px solid #52BBF9;
+  border-bottom: 3px solid #0057FF;
   padding-bottom: 10px;
 }
 
@@ -459,14 +488,14 @@ body { font-family: sans-serif; }
 }
 
 .tab:hover {
-  border-bottom: 3px solid #52BBF9;
+  border-bottom: 3px solid #0057FF;
   padding-bottom: 10px;
 }
 
 .carousel-cell {
   width: 28%;
-  height: 200px;
-  margin-right: 10px;
+  /* height: 100px; */
+  margin-right: 25px;
   background: #8C8;
   border-radius: 5px;
   counter-increment: carousel-cell;
@@ -522,6 +551,32 @@ body { font-family: sans-serif; }
   margin-top: 40px;
 }
 
+.flickity-button{
+  background: #0057FF;
+
+
+}
+.flickity-button:hover{
+  background: #0057FF;
+
+
+}
+
+.flickity-button-icon{
+  height: 50% !important;
+  width:50% !important;
+  left: 25% !important;
+  top:25% !important;
+  fill:#F8F0DB !important;
+
+}
+
+.flickity-prev-next-button{
+  width: 32px;
+  height: 32px;
+  transform: translateY(-100%);
+}
+
 .gallery {
   padding-bottom: 20px;
   margin-bottom: 0;
@@ -531,6 +586,7 @@ body { font-family: sans-serif; }
   padding: 0;
   margin: 0;
   padding-left: 20px;
+  font-size: 12px;
 }
 
 .resort-description h2 {
@@ -548,6 +604,7 @@ body { font-family: sans-serif; }
 .resort-images.active {
   display: flex;
   justify-content: space-between;
+  gap:1rem;
 }
 
 .flex-buttons {
@@ -556,7 +613,7 @@ body { font-family: sans-serif; }
 }
 
 .carousel-cell .island-name {
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   font-size: 24px;
   color: #fff;
   position: absolute;
@@ -573,7 +630,7 @@ body { font-family: sans-serif; }
 }
 
 .carousel-island .carousel-cell {
-  height: 300px;
+  height: 240px;
   border-radius: 10px;
   overflow: hidden;
   background-color: #000;
@@ -584,11 +641,11 @@ body { font-family: sans-serif; }
 }
 
 .Book-now-button {
-  background-color: #000;
+  background-color: #0057FF;
   text-align: center;
   padding: 10px;
   color: #fff;
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   margin-top: 10px;
   font-size: 18px;
   display: block;
@@ -608,13 +665,13 @@ body { font-family: sans-serif; }
 
 .no-results {
   background-color:#214f73;
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   color: #fff;
   text-align: center;
 }
 
 .no-results h2 {
-  font-family: Open Sans, sans-serif;
+  /* font-family: Open Sans, sans-serif; */
   margin: 0;
   font-weight: 100;
 }
@@ -635,10 +692,14 @@ body { font-family: sans-serif; }
 
 .island-name {
   margin-top: -10px !important;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .required {
   display: block;
+  font-family: 'SandalsSans', sans-serif;
+  font-weight: 400;
 }
 
 .white {
